[package]
name = "generic-tests"
version = "0.1.1"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
edition = "2018"
description = "Procedural macro to define tests and benchmarks generically"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mzabaluev/generic-tests/"
categories = ["development-tools::testing"]
keywords = ["generics", "parametric", "tests"]

[lib]
proc-macro = true
path = "src/macro.rs"

[features]
test-tokio = [
    "tokio/macros",
    "tokio/rt-multi-thread",
    "tokio/io-util",
]

[dependencies]
syn = { version = "1.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
bytes = "1.0"
tokio = "1.2"
