[package]
name = "generic-tests"
version = "0.1.3"
authors = ["Mikhail Zabaluev <mikhail.zabaluev@gmail.com>"]
edition = "2021"
description = "Procedural macro to define tests and benchmarks generically"
readme = "README.md"
license = "MIT OR Apache-2.0"
repository = "https://github.com/mzabaluev/generic-tests/"
categories = ["development-tools::testing"]
keywords = ["generics", "parametric", "tests"]

[lib]
proc-macro = true
path = "src/macro.rs"

[features]
[dependencies]
syn = { version = "2.0", features = ["full", "visit", "visit-mut", "extra-traits"] }
proc-macro2 = "1.0"
quote = "1.0"

[dev-dependencies]
bytes = "1.0"
tokio = { version = "1.2", features = ["macros", "rt-multi-thread", "io-util"] }
